# docs

./: .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .travis.yml  1112.pages  =45.0  =6.3.1  CONTRIBUTING.md  CONTRIBUTING_DOC_cn.md  CONTRIBUTING_cn.md  Makefile  README.md  README_cn.md  README_ja.md  average_cn.rst  backward_cn.rst  docs-build.sh  fluid_cn.rst  gen_index.py  hy.rst  io__cn.rst  layers_cn.rst  layers_cn_hy_1114.rst  local_dev_guide_en.md  nets_cn.rst  optimizer1_cn.rst  optimizer_cn_rst  pyproject.toml  requirements.txt  submit_pr_guide_en.md  temp.diff  train_example_xpu2_cn.md  transpiler_cn.rst
.github/ISSUE_TEMPLATE/: 1_documentation-issue.yml  2_eval-issue.yml  3_eval_distributed_DataParallel_docs-issue.yml  4_distributed_PS_docs-issue.yml  4_eval_distributed_PS_docs-issue.yml  distributed_DataParallel_docs-issue.yml  distributed_PS_docs-issue.yml
.pre-commit-hooks/: convert_markdown_into_html.py  convert_markdown_into_ipynb.sh
Desktop/: README.md  README_Tutorials.md
ci_scripts/: Dockerfile  api_white_list.txt  check_api_cn.sh  check_api_docs_en.py  check_api_docs_en.sh  check_api_label_cn.py  check_api_label_cn.sh  check_api_parameters.py  check_api_parameters.sh  check_code.sh  check_copy_from_parsed_into_sample_code.py  check_pr_approval.py  checkapproval.sh  chinese_samplecode_processor.py  ci_start.sh  ci_start_en.sh  gendoc.sh  utils.sh
ci_scripts/CAPItools/: README.md  main.py  requirements.txt  utils.py  utils_helper.py
ci_scripts/hooks/: post-doc-compile.sh  post_filter_htmls.py  pre-doc-compile.sh
doc/about/: about_us.rst
doc/fluid/: api  flags_cn.rst  flags_en.rst  index_cn.rst  index_en.rst  menu.json  overview.md  release_note.rst  release_note_cn.md  release_note_cn.rst  release_note_en.md  release_note_en.rst
doc/paddle/: doc_tree_cn  index_cn.rst  index_en.rst  release_note_cn.md  release_note_en.md
doc/templates/: common_docs.py
docs/: index_cn.rst  index_en.rst  mytest_en.md  release_note_cn.md  release_note_en.md
docs/advanced_guide/: index_en.rst
docs/api/: .gitignore  api_aliases.ini  api_label  copy_codes_from_en_doc.py  extract_api_from_docs.py  gen_alias_api.py  gen_doc.py  gen_doc.sh  index_cn.rst  index_en.rst  not_display_doc_list
docs/api_doc_standard/: drawing_specification.md  write_guide.md
docs/api_guides/: index_cn.rst  index_en.rst
docs/book/: index_en.rst
docs/dev_guides/: Overview_cn.md  README.md  code_contributing_path_cn.md  code_review_cn.md  code_review_en.md  docs_contributing_guides_cn.md  index_cn.rst  index_en.rst  local_dev_guide_cn.md  local_dev_guide_en.md  paddle_ci_manual.md  style_guides_cn.md  submit_pr_guide_cn.md  submit_pr_guide_en.md
docs/eval/: evaluation_of_docs_system.md  【Hackathon No.111】 PR.md  【Hackathon No.111】PR.md  【Hackathon No.112】 PR.md  【Hackathon No.113】 PR.md  【Hackathon No.69】PR.md
docs/faq/: 2.0.md  data_cn.md  distributed_cn.md  index_cn.rst  install_cn.md  lod_tensor_related.md  others_cn.md  params_cn.md  save_cn.md  train_cn.md
docs/guides/: build_model_en.md  datasets_dataloader_en.md  index_cn.rst  index_en.rst  processing_en.md  quick_start_en.md  saving_loading_en.md  training_en.md
docs/guides_en/: quick_start_en.md  training_en.md
docs/hardware_support/: hardware_info_cn.md  index_cn.rst
docs/images/: op.dot  op_op_with_kern_class_diagram.dot  op_with_kernel.dot  rnn.dot
docs/install/: FAQ.md  FAQ_en.md  Tables.md  Tables_en.md  index_cn.rst  index_en.rst  instalL_NGC_PaddlePaddle_ch.rst  install_Kunlun_en.md  install_Kunlun_zh.md  install_NGC_PaddlePaddle_ch.rst  install_NGC_PaddlePaddle_en.rst  install_NGC_en.md  install_ROCM_zh.md  install_dcu_cn.md  install_mlu_cn.md  install_npu_cn.md  install_script.md  install_xpu_cn.md
docs/practices/: image_classification_3D.ipynb  index_cn.rst
docs/templates/: common_docs.py  layout.html
docs/tutorial/: index_cn.rst
docs/user_guides/: index_en.rst
scripts/: api_white_list.txt  build_and_install_paddle.sh  build_doc_lib_lite.sh  build_doc_lib_lite2.sh  build_docs.sh  check_api_cn.sh  check_code.sh  check_pr_approval.py  checkapproval.sh  deploy_docs.sh  deploy_en_external_docs.sh  make_web.sh  return_white_list.txt  start.sh  test01.py
source/: conf.py  index.rst
source/Mobile/: .gitignore  .pre-commit-config.yaml  .travis.yml  README.cn.md  README.md
source/Mobile/Demo/Android/AICamera/app/: CMakeLists.txt  FindPaddle.cmake  build.gradle  proguard-rules.pro
source/Mobile/Demo/Android/AICamera/app/src/androidTest/java/com/paddlepaddle/pdcamera/: ExampleInstrumentedTest.java
source/Mobile/Demo/Android/AICamera/app/src/main/: AndroidManifest.xml
source/Mobile/Demo/Android/AICamera/app/src/main/cpp/: android_common.h  image.h  image_recognizer_jni.cpp  image_utils.cpp  paddle_image_recognizer.cpp  paddle_image_recognizer.h
source/Mobile/Demo/Android/AICamera/app/src/main/java/com/paddlepaddle/pdcamera/: AutoFitTextureView.java  ImageRecognizer.java  ImageUtils.java  MainActivity.java  SSDData.java  SSDLayerView.java  SSDModel.java  SettingsActivity.java  SettingsManager.java
source/Mobile/Demo/Android/AICamera/app/src/main/res/layout/: activity_main.xml  settings.xml
source/Mobile/Demo/Android/AICamera/app/src/main/res/values/: strings.xml  styles.xml
source/Mobile/Demo/Android/AICamera/app/src/test/java/com/paddlepaddle/pdcamera/: ExampleUnitTest.java
source/Mobile/Demo/linux/: CMakeLists.txt  FindOpenCV.cmake  FindPaddle.cmake  README.md  image_io.cpp  image_io.h  paddle_image_recognizer.cpp  paddle_image_recognizer.h
source/Mobile/Demo/linux/ssd/: README.md  main.cpp
source/Mobile/Demo/linux/ssd/models/: model_download.sh
source/Mobile/Demo/linux/ssd/models/vgg_ssd_net/: merge_model.py  vgg_ssd_net.py
source/Mobile/benchmark/tool/C/: CMakeLists.txt  FindPaddle.cmake  README.cn.md  README.md  inference.cc
source/advanced_usage/: benchmark.md  benchmark.rst  index.rst
source/api_guides/: index.rst
source/api_reference/: CMakeLists.txt  average.rst  backward.rst  clip.rst  data  data.rst  (+18 more)
technical_articles/: README.md
(+11487 files in other folders)
